! extension이 text가 아닌 object를 전달받도록 변경.

--- a/web_browser_plugins/chrome/popup.html
+++ b/web_browser_plugins/chrome/popup.html
@@ -5,6 +5,9 @@
     <script src='popup.js'></script>
 </head>
 <body style="width:400px;">
-<div id='message'>Extracting texts</div>
+    <button id='debug-button'>숨기기</button>
+    <button id="translate">번역하기</button>
+    <button id="show-translation">번역보기</button>
+    <div id='message'>Extracting texts</div>
 </body>
 </html>
