! chrome extension could run inject script

--- a/web_browser_plugins/chrome/popup.html
+++ b/web_browser_plugins/chrome/popup.html
@@ -8,6 +8,7 @@
     <button id='debug-button'>숨기기</button>
     <button id="translate">번역하기</button>
     <button id="show-translation">번역보기</button>
+    <div id='debug-window'></div>
     <div id='message'>Extracting texts</div>
 </body>
 </html>
